--- a/views/partials/history_scripts.ejs
+++ b/views/partials/history_scripts.ejs
@@ -46,8 +46,7 @@ var createHistorySection = function(op){
 					paper_bgcolor: "#fafafa",
 					plot_bgcolor: "#fafafa",
 					legend: {
-						orientation: "h",
-						y: -10
+						orientation: "h"
   					}
 				};
 
