--- a/views/partials/pie_template.ejs
+++ b/views/partials/pie_template.ejs
@@ -4,7 +4,7 @@
 	    <label for="month">Mese</label>
 		<select name="month" id="month" class="form-control" >
 			<option value="1">Gennaio</option>
-			<option value="2">Fabbrario</option>
+			<option value="2">Febbrario</option>
 			<option value="3">Marzo</option>
 			<option value="4">Aprile</option>
 			<option value="5">Maggio</option>
