--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,5 +19,6 @@
       <a href="#/CashFlowSumList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow Sum</a>
       <a href="#/PieChart" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Pie Chart</a>
       <a href="#/History" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">History</a>
+      <a href="#/User" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">User</a>
     </ul>
   </div>
